--- a/manifest.json
+++ b/manifest.json
@@ -17,7 +17,7 @@
             "js":[
                 "./js/jquery-3.1.1.min.js",
                 "./js/jquery.balloon.min.js",
-                "./js/popup.js",
+                "./js/popbox.js",
                 "./js/checker-version/checker-1.0.4.js"
             ],
             "web_accessible_resources":[
