--- a/manifest.json
+++ b/manifest.json
@@ -17,6 +17,7 @@
             "js":[
                 "./js/jquery-3.1.1.min.js",
                 "./js/jquery.balloon.js",
+                "./js/popbox.js",
                 "./js/setElementCheckResult.js",
                 "./js/setTagCheckResult.js",
                 "./js/checker-version/checker-1.0.4.js"
