--- a/manifest.json
+++ b/manifest.json
@@ -17,9 +17,9 @@
             "js":[
                 "./js/jquery-3.1.1.min.js",
                 "./js/jquery.balloon.js",
-                "./js/popbox.js",
-                "./js/setElementCheckResult.js",
-                "./js/setTagCheckResult.js",
+                "./js/popbox_1.0.0.js",
+                "./js/setElementCheckResult_1.0.0.js",
+                "./js/setTagCheckResult_1.0.0.js",
                 "./js/checker-version/checker-1.0.4.js"
             ],
             "web_accessible_resources":[
